Give Parcel map a makeover. List of ParcelNumbers appears on right, parcel map binds to the selected id and highlights yellow, stats are shown on bottom. Pretty awesome when we have implementations  elsewhere that exactly suit needs. Also updated css to ensure that buttons on the create-user-profile page don't get too big

--- a/Source/Rio.Web/src/app/pages/create-user-profile/create-user-profile.component.scss
+++ b/Source/Rio.Web/src/app/pages/create-user-profile/create-user-profile.component.scss
@@ -1,3 +1,4 @@
 .btn {
     width: 500px;
+    max-width: 500px;
 }
